0.0.17

0.0.16
- Added Thermoelectric Generator (Generates FE when placed on top of a high temp block/fluid like lava...,require a coolant fluid like water.)
- Updated Lollipop to 0.0.14
- IMPORTANT NOTE!!, Moved Magmatic fluid list config to Magmatic_Generator.toml

0.0.15
- Player Transmitter charge player inventory before Curios inventory now.
- Fix some blocks not dropping closes #8

0.0.14
- Added compatibility with "Curios" mod (Player transmitter charge items in "Curios" inventory)
- Fixed some water logging issues
- Updated Lollipop to 0.0.13

0.0.13
- Fixed Energy cables are transferring to the first block only.
  now should transfer to all blocks correctly

0.0.12
- Most blocks are water logged now
- Now you can place Player Transmitter on cables.

0.0.11
- Fixed Energy cables energy leak
- Added config for energy per fuel tick in furnator.toml
- Fixed bugs.

0.0.10
- Added Energy Discharger (Used to drain energy from items and keep it, can hold up to 4 items).
- Added config for every block capacity, transfer, generation etc...
- Fixed generation consumption leak.
- Edited Furnator texture a bit.
- Fixed more bugs.
- Fixed Magmatic Generator fluid capacity.